# Fakelake

./: .gitignore  404.html  Cargo.toml  LICENSE.txt  README.md  index.html  mkdocs.yml  search.html  sitemap.xml
.github/scripts/: validate_csv.py  validate_json.py  validate_parquet.py
.github/workflows/: build.yml  linter.yml  publish-docs.yml  release.yml  test.yml
bench/: BENCHMARK.md  fakelake_input.yaml  faker_bench.py  mimesis_bench.py  requirements.txt
columns/options/: index.html
columns/providers/: index.html
columns/providers/constant/: index.html
columns/providers/increment/: index.html
columns/providers/person/: index.html
columns/providers/random/: index.html
docs/: index.md
docs/columns/: options.md
docs/columns/providers/: constant.md  increment.md  index.md  person.md  random.md
docs/output/: parameters.md
docs/usage/: create_your_yaml_file.md  generate.md
output/parameters/: index.html
scripts/: benchmark.sh  git-hook-installer.sh  linter.sh  mkdocs-dev.sh  test-coverage.sh
scripts/files/: pre-commit
search/: search_index.json
src/: cli.rs  config.rs  errors.rs  generate.rs  logger.rs  main.rs  rng.rs  utils.rs
src/generate/: generate.rs  mod.rs  output_format.rs  parquet_format.rs
src/generate/csv/: mod.rs
src/generate/json/: mod.rs
src/generate/parquet/: batch_generator.rs  mod.rs  parquet_format.rs  utils.rs
src/options/: mod.rs  presence.rs
src/providers/: column_options.rs  mod.rs  presence_option.rs  provider.rs
src/providers/constant/: builder.rs  external.rs  mod.rs  string.rs
src/providers/date/: date.rs  mod.rs
src/providers/generic/: lstring.rs  mod.rs
src/providers/increment/: builder.rs  integer.rs  mod.rs
src/providers/integer/: auto_increment.rs  mod.rs
src/providers/parameters/: date.rs  datetime.rs  f64.rs  file.rs  i32.rs  mod.rs  percentage.rs  string.rs  urange.rs  wstring.rs
src/providers/person/: builder.rs  email.rs  fname.rs  lname.rs  mod.rs
static/: first_name_fr.txt  last_name_fr.txt
tests/: all_options.yaml  csv_all_options.yaml  example.txt  json_all_options.yaml  one_row.yaml  one_row_csv.yaml  one_row_json.yaml  one_row_parquet.yaml  parquet_all_options.yaml  simple.yaml  simple_with_info.yaml  tarpaulin-report.html  test.rs
usage/create_your_yaml_file/: index.html
usage/generate/: index.html
(+19 files in other folders)
