[package]
name = "fakelake"
version = "1.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "52.0.0"
arrow-schema = "52.0.0"
chrono = "0.4.31"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.3"
fastrand = "2.0.1"
fastrand-contrib = "0.1.0"
linked-hash-map = "0.5.6"
log = "0.4"
once_cell = "1.8"
parquet = "52.0.0"
rayon = "1.8.0"
serde_json = "1.0.114"
yaml-rust = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
cargo-tarpaulin = "0.30.0"
ctor = "0.2.8"
mockall = "0.12.1"
predicates = "3.1.0"
regex = "1.5"
