[package]
name = "fakelake"
version = "1.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "53.0.0"
arrow-schema = "53.0.0"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.5"
fastrand = "2.1.1"
fastrand-contrib = "0.1.0"
lexical-core = "1.0.0"
linked-hash-map = "0.5.6"
log = "0.4.22"
once_cell = "1.19.0"
parquet = "53.0.0"
rayon = "1.10.0"
serde_json = "1.0.128"
yaml-rust = "0.4.5"

[dev-dependencies]
assert_cmd = "2.0.16"
cargo-tarpaulin = "0.31.2"
ctor = "0.2.8"
lexical-core = "1.0.0"
mockall = "0.13.0"
predicates = "3.1.2"
regex = "1.10.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }