[package]
name = "fakelake"
version = "1.7.2"
edition = "2021"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.9"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
linked-hash-map = "0.5.6"
log = "0.4.29"
once_cell = "1.21.3"
parquet = "56.2.0"
rayon = "1.11.0"
serde_json = "1.0.149"
yaml-rust = "0.4.5"

[dev-dependencies]
assert_cmd = "2.2.0"
cargo-tarpaulin = "0.32.8"
ctor = "0.6.3"
mockall = "0.14.0"
predicates = "3.1.4"
regex = "1.12.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
